v4.2 - minor position fixes (z-index)

--- a/m.portflio.netify/assets/css/styles.css
+++ b/m.portflio.netify/assets/css/styles.css
@@ -10,10 +10,17 @@
   align-items: center;
   margin: 60px 0;
   height: 80vh;
+  background-color: #fff;
+  border: 1px solid #a2efe3;
+  z-index: 0;
 }
 
 #nav-stack {
   margin: 80px 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -126,6 +133,7 @@
   height: 95%;
   width: 10px;
   background-color: #a2efe3;
+  z-index: -1;
 }
 
 /* ══════════════════════════════════════════════════════════════════════════ */
