--- a/m.portflio.netify/assets/css/utils/outline.scss
+++ b/m.portflio.netify/assets/css/utils/outline.scss
@@ -18,6 +18,8 @@
     height: 95%;
     width: 10px;
     background-color: #a2efe3;
+    z-index: -1;
+
   }
 }
 /* ══════════════════════════════════════════════════════════════════════════ */
